--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "dotenv": "^16.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
