--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "history": "^4.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
@@ -29,8 +30,7 @@
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "dotenv": "^16.4.7"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
