--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-AUTH_CODE="vitinbalatensa"
+REACT_APP_AUTH_CODE="vitinbalatensa"
+REACT_APP_DEV_URL="http://localhost:3333"
+REACT_APP_PROD_URL="https://api-ctrl-fin.vsbdev.com.br"
+REACT_APP_ENV="DEV"
