--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "excel-date-to-js": "^1.1.5",
     "flowbite-react": "^0.10.2",
     "history": "^4.10.1",
     "react": "^18.3.1",
