--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/x-charts": "^7.22.2",
     "@mui/x-data-grid": "^7.22.2",
     "@mui/x-date-pickers": "^7.22.2",
+    "@react-oauth/google": "^0.13.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,9 +18,11 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.3",
     "excel-date-to-js": "^1.1.5",
     "flowbite-react": "^0.10.2",
     "history": "^4.10.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
